Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn24/sn24.96_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.96_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.96_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn24.96:1.3": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist frei von Krankheit‘?“ ",
   "sn24.96:1.4": "„Unsere Lehren wurzeln im Buddha …“ ",
   "sn24.96:2.1": "„Wenn Form besteht, Mönche und Nonnen, weil man Form ergreift und auf Form besteht, entsteht die Ansicht: ",
-  "sn24.96:2.2": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist heil.‘ ",
+  "sn24.96:2.2": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist frei von Krankheit.‘ ",
   "sn24.96:2.3": "Wenn Gefühl besteht … ",
   "sn24.96:2.4": "Wenn Wahrnehmung besteht … ",
   "sn24.96:2.5": "Wenn Entscheidungen bestehen … ",
