--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -239,7 +239,7 @@
   "dn27:24.4": "Denn, Vāseṭṭha, Grundsätze sind das beste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
   "dn27:25.0": "13. Der Kreis der Hilfsarbeiter ",
   "dn27:25.1": "Die restlichen Wesen lebten von der Jagd und kleineren Arbeiten. ",
-  "dn27:25.2": "‚Sie leben von der Jagd und Hilfsarbeiten‘ ist die Bedeutung von ‚Hilfsarbeiter‘, des Ausdrucks, der auf sie angewendet wurde. ",
+  "dn27:25.2": "‚Sie leben von der Jagd und kleineren Arbeiten‘ ist die Bedeutung von ‚Hilfsarbeiter‘, des Ausdrucks, der auf sie angewendet wurde. ",
   "dn27:25.3": "Und so, Vāseṭṭha, wurde der alte, ursprüngliche Ausdruck für den Kreis der Hilfsarbeiter geschaffen; für eben diese Wesen, keine anderen; für die, die ihnen gleichen, nicht für Ungleiche; anhand von Grundsätzen, nicht gegen Grundsätze. ",
   "dn27:25.4": "Denn, Vāseṭṭha, Grundsätze sind das beste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
   "dn27:26.1": "Es kam eine Zeit, da ein Adliger, ",
