--- a/translation/de/sabbamitta/sutta/dn/dn3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn3_translation-de-sabbamitta.json
@@ -97,7 +97,7 @@
   "dn3:1.15.12": "Da wandte sich König Okkāka an seine Minister und Berater: ",
   "dn3:1.15.13": "‚Wo, ihr Herren, haben sich die Prinzen nun niedergelassen?‘ ",
   "dn3:1.15.14": "‚Majestät, da ist ein Lotusteich an den Hängen des Himalaya, wo ein großer Wald von Sakhuabäumen wächst. Dort haben sie sich niedergelassen. ",
-  "dn3:1.15.15": "Aus Furcht, dass ihre Linie sich auflösen könnte, schlafen sie mit ihren eigenen Schwestern.‘ ",
+  "dn3:1.15.15": "Aus Furcht, ihre Abstammungslinie zu unterbrechen, schlafen sie mit ihren eigenen Schwestern.‘ ",
   "dn3:1.15.16": "Darauf, Ambaṭṭha, drückte der König Okkāka dieses innige Gefühl aus: ",
   "dn3:1.15.17": "‚Die Prinzen sind wahrhaftig Sakyer! Die Prinzen sind wahrhaftig die besten Sakyer!‘ ",
   "dn3:1.15.18": "Von diesem Tag an kannte man die Sakyer, und er war ihr Begründer. ",
