Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
@@ -132,7 +132,7 @@
   "dn5:10.7": "Brahmane, ich will ein großes Opfer begehen. ",
   "dn5:10.8": "Bitte leite mich an. Das wird zu meinem langanhaltenden Nutzen und Glück sein.‘ ",
   "dn5:11.1": "Daraufhin sagte der brahmanische Hohepriester zu ihm: ",
-  "dn5:11.2": "‚Herr, das Reich des Königs wird geplündert und verwüstet. Es wurden Räuber gesehen, die Dörfer, Marktflecken und Städte überfielen und Landstraßen heimsuchten. ",
+  "dn5:11.2": "‚Herr, das Reich des Königs wird geplündert und verwüstet. Es wurden Überfälle auf Dörfer, Marktflecken und Städte wie auch Wegelagerei gesehen. ",
   "dn5:11.3": "Aber wenn der König mehr Steuern erheben würde, während das Reich so geplündert und verwüstet wird, würde er nicht seine Pflicht tun. ",
   "dn5:11.4": "Nun könnte der König denken: ",
   "dn5:11.5": "„Ich werde diese Gefahr vonseiten Gesetzloser durch Hinrichtung, Haft, Einziehung des Vermögens, Entehrung oder Verbannung ausrotten!“ Aber das ist nicht der richtige Weg, um diese Gefahr vonseiten Gesetzloser auszurotten. ",
