Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
@@ -152,7 +152,7 @@
   "dn26:13.2": "‚Es scheint, der König schlägt jedem den Kopf ab, der von anderen in diebischer Absicht stiehlt.‘ ",
   "dn26:13.3": "Sie dachten: ",
   "dn26:13.4": "‚Wir lassen besser scharfe Schwerter machen. Wenn wir dann von anderen stehlen, bringen wir es mit ihnen zu Ende, machen sie fertig und schlagen ihnen den Kopf ab.‘ ",
-  "dn26:13.5": "Sie ließen scharfe Schwerter machen. Dann begannen sie, Dörfer, Marktflecken und Städte zu überfallen und Landstraßen heimzusuchen. ",
+  "dn26:13.5": "Sie ließen scharfe Schwerter machen. Dann begannen sie, Dörfer, Marktflecken und Städte zu überfallen und Landstraßen zu belagern. ",
   "dn26:13.6": "Und jedem, von dem sie stahlen, schlugen sie den Kopf ab. ",
   "dn26:14.1": "Und so, Mönche und Nonnen, breitete sich, als den Mittellosen im Reich kein Geld zur Verfügung gestellt wurde, Armut aus. Als Armut verbreitet war, breitete sich Diebstahl aus. Als Diebstahl verbreitet war, breiteten sich Schwerter aus. Als Schwerter verbreitet waren, breitete sich das Töten lebender Geschöpfe aus. Und bei den Lebewesen, bei denen das Töten verbreitet war, gingen Lebensdauer und Schönheit zurück. ",
   "dn26:14.2": "Jene Menschen, die 80.000 Jahre lebten, hatten Kinder, die 40.000 Jahre lebten. ",
