--- a/translation/de/sabbamitta/sutta/an/an3/an3.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.50_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "an3.50:0.1": "Nummerierte Lehrreden 3.50 ",
   "an3.50:0.2": "5. Das kürzere Kapitel ",
   "an3.50:0.3": "Ein Meisterdieb ",
-  "an3.50:1.1": "„Mönche und Nonnen, ein Meisterdieb, der drei Faktoren besitzt, bricht in Häuser ein, plündert Vermögen, stiehlt aus abgelegenen Gebäuden und macht Landstraßen unsicher. ",
+  "an3.50:1.1": "„Mönche und Nonnen, ein Meisterdieb, der drei Faktoren besitzt, bricht in Häuser ein, plündert Vermögen, raubt aus abgelegenen Gebäuden und blockiert Landstraßen. ",
   "an3.50:1.2": "Welche drei? ",
   "an3.50:1.3": "Ein Meisterdieb setzt auf unebenes Gelände, auf gute Deckung und auf mächtige Personen. ",
   "an3.50:1.4": "Und wie setzt ein Meisterdieb auf unebenes Gelände? ",
