--- a/translation/de/sabbamitta/sutta/an/an3/an3.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.50_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an3.50:3.4": "‚Wenn mich jemand wegen irgendetwas anklagt, werden diese Herrscher oder königlichen Minister in dem Fall zu meiner Verteidigung sprechen.‘ ",
   "an3.50:3.5": "Und genauso kommt es. ",
   "an3.50:3.6": "So setzt ein Meisterdieb auf mächtige Personen. ",
-  "an3.50:3.7": "Ein Meisterdieb, der diese drei Faktoren besitzt, bricht in Häuser ein, plündert Vermögen, stiehlt aus abgelegenen Gebäuden und macht Landstraßen unsicher. ",
+  "an3.50:3.7": "Ein Meisterdieb, der diese drei Faktoren besitzt, bricht in Häuser ein, plündert Vermögen, raubt aus abgelegenen Gebäuden und blockiert Landstraßen. ",
   "an3.50:4.1": "Ebenso ist es mit einem schlechten Mönch, der drei Faktoren besitzt: Er zerbricht und zerstört sich fortwährend selbst, er wird von vernünftigen Menschen zu Recht getadelt und gescholten und schafft viel Schlechtigkeit. ",
   "an3.50:4.2": "Was sind die drei Faktoren? ",
   "an3.50:4.3": "Ein schlechter Mönch setzt auf unebenes Gelände, auf gute Deckung und auf mächtige Personen. ",
