Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
@@ -135,7 +135,7 @@
   "dn5:11.2": "‚Herr, das Reich des Königs wird geplündert und verwüstet. Es wurden Überfälle auf Dörfer, Marktflecken und Städte wie auch Wegelagerei gesehen. ",
   "dn5:11.3": "Aber wenn der König mehr Steuern erheben würde, während das Reich so geplündert und verwüstet wird, würde er nicht seine Pflicht tun. ",
   "dn5:11.4": "Nun könnte der König denken: ",
-  "dn5:11.5": "„Ich werde diese Räuberplage durch Hinrichtung, Haft, Einziehung des Vermögens, Entehrung oder Verbannung ausrotten!“ Aber das ist nicht der richtige Weg, um diese Räuberplage auszurotten. ",
+  "dn5:11.5": "„Ich werde diese Plage von Wilden durch Hinrichtung, Haft, Einziehung des Vermögens, Entehrung oder Verbannung ausrotten!“ Aber das ist nicht der richtige Weg, um diese Plage von Wilden auszurotten. ",
   "dn5:11.6": "Die, die dem Töten entgehen, werden erneut das Reich des Königs plündern. ",
   "dn5:11.7": "Hier ist vielmehr ein Plan, durch den die Gefahr vonseiten Gesetzloser erfolgreich ausgerottet werden kann: ",
   "dn5:11.8": "Der König stelle also denen im Reich, die Feldfrüchte anbauen und Vieh züchten, Saatgut und Futter zur Verfügung. ",
