Translations by ayyasoma to translation/it/soma/sutta/mn/mn28_translation-it-soma.json

--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "mn28:3.2": "La nascita è dukkha, l’invecchiare è dukkha, la morte è dukkha, la tristezza, piangere, la sofferenza e l’insoddisfazione è dukkha, non ottenere ciò che si desidera è dukkha, le cinque cataste ardenti sono dukkha. ",
-  "mn28:3.3": "E quali sono queste cinque cataste ardenti? ",
+  "mn28:3.3": "E cosa sono queste cinque cataste ardenti? ",
   "mn28:3.4": "Sono le cataste ardenti (fatte di) materia, sensazioni, percezioni, conformazioni, coscienza. ",
   "mn28:4.1": "E cosa è la catasta ardente della forma/materia? ",
   "mn28:5.2": "L’elemento terra/solido, l’elemento acqua/liquido, l’elemento fuoco, l’elemento aria/gas. ",
