--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -5,5 +5,6 @@
   "mn28:4.1": "E cosa/quale è la catasta ardente della forma/materia? ",
   "mn28:5.2": "L’elemento terra/solido, l’elemento acqua/liquido, l’elemento fuoco, l’elemento aria/gas. ",
   "mn28:6.1": "E qual è, amico, l’elemento terra? ",
-  "mn28:6.2": "L’elemento terra può essere interno o esterno. "
+  "mn28:6.2": "L’elemento terra può essere interno o esterno. ",
+  "mn28:6.3": "E che cos'e' l'elemento terra interno? "
 }
