Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn24.37:0.3": "Das Selbst besitzt Form ",
   "sn24.37:1.1": "In Sāvatthī. ",
   "sn24.37:1.2": "„Mönche und Nonnen, wenn was besteht, weil man was ergreift und worauf besteht, entsteht die Ansicht: ",
-  "sn24.37:1.3": "‚Das Selbst besitzt nach dem Tod Form und ist heil‘?“ ",
+  "sn24.37:1.3": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit‘?“ ",
   "sn24.37:1.4": "„Unsere Lehren wurzeln im Buddha …“ ",
   "sn24.37:2.1": "„Wenn Form besteht, Mönche und Nonnen, weil man Form ergreift und auf Form besteht, entsteht die Ansicht: ",
   "sn24.37:2.2": "‚Das Selbst besitzt nach dem Tod Form und ist heil.‘ ",
