--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn24.37:1.3": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit‘?“ ",
   "sn24.37:1.4": "„Unsere Lehren wurzeln im Buddha …“ ",
   "sn24.37:2.1": "„Wenn Form besteht, Mönche und Nonnen, weil man Form ergreift und auf Form besteht, entsteht die Ansicht: ",
-  "sn24.37:2.2": "‚Das Selbst besitzt nach dem Tod Form und ist heil.‘ ",
+  "sn24.37:2.2": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit.‘ ",
   "sn24.37:2.3": "Wenn Gefühl besteht … ",
   "sn24.37:2.4": "Wenn Wahrnehmung besteht … ",
   "sn24.37:2.5": "Wenn Entscheidungen bestehen … ",
