--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn24.37:2.4": "Wenn Wahrnehmung besteht … ",
   "sn24.37:2.5": "Wenn Entscheidungen bestehen … ",
   "sn24.37:2.6": "Wenn Bewusstsein besteht, weil man Bewusstsein ergreift und auf Bewusstsein besteht, entsteht die Ansicht: ",
-  "sn24.37:2.7": "‚Das Selbst besitzt nach dem Tod Form und ist heil.‘ ",
+  "sn24.37:2.7": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit.‘ ",
   "sn24.37:3.1": "Was denkt ihr, Mönche und Nonnen? Ist Form beständig oder unbeständig?“ ",
   "sn24.37:3.2": "„Unbeständig, Herr.“ … ",
   "sn24.37:3.3": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würde dadurch die Ansicht entstehen: ",
