Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "sn24.37:3.1": "Was denkt ihr, Mönche und Nonnen? Ist Form beständig oder unbeständig?“ ",
   "sn24.37:3.2": "„Unbeständig, Herr.“ … ",
   "sn24.37:3.3": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würde dadurch die Ansicht entstehen: ",
-  "sn24.37:3.4": "‚Das Selbst besitzt nach dem Tod Form und ist heil‘?“ ",
+  "sn24.37:3.4": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit‘?“ ",
   "sn24.37:3.5": "„Nein, Herr.“ ",
   "sn24.37:3.6": "„Wenn daher Leiden besteht, weil man Leiden ergreift und auf Leiden besteht, entsteht die Ansicht: ",
   "sn24.37:3.7": "‚Das Selbst besitzt nach dem Tod Form und ist heil.‘“ … ",
