--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.37_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "sn24.37:3.4": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit‘?“ ",
   "sn24.37:3.5": "„Nein, Herr.“ ",
   "sn24.37:3.6": "„Wenn daher Leiden besteht, weil man Leiden ergreift und auf Leiden besteht, entsteht die Ansicht: ",
-  "sn24.37:3.7": "‚Das Selbst besitzt nach dem Tod Form und ist heil.‘“ … ",
+  "sn24.37:3.7": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit.‘“ … ",
   "sn24.37:3.8": "„Ist Gefühl beständig …“ … ",
   "sn24.37:3.10": "„Wenn daher Leiden besteht, weil man Leiden ergreift und auf Leiden besteht, entsteht die Ansicht: ",
   "sn24.37:3.11": "‚Das Selbst besitzt nach dem Tod Form und ist heil.‘“ "
