--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -360,7 +360,7 @@
   "dn29:37.0": "16. Ansichten über die Zukunft ",
   "dn29:37.1": "Welches sind die Ansichten über die Zukunft, auf die sich manche stützen? ",
   "dn29:37.3": "Es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
-  "dn29:37.4": "‚Das Selbst besitzt nach dem Tod Form und ist heil; ",
+  "dn29:37.4": "‚Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit; ",
   "dn29:37.6": "oder es ist formlos; ",
   "dn29:37.7": "oder es besitzt sowohl Form als auch nicht; ",
   "dn29:37.8": "oder es besitzt weder Form noch ist es formlos; ",
