--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -369,7 +369,7 @@
   "dn29:37.11": "oder es besitzt weder Wahrnehmung noch ist es ohne Wahrnehmung; ",
   "dn29:37.12": "oder das Selbst wird vernichtet und zerstört, wenn der Körper auseinanderbricht, und besteht nach dem Tod nicht fort. Das allein ist die Wahrheit, andere Vorstellungen sind einfältig.‘ ",
   "dn29:38.1": "Im Hinblick darauf gehe ich zu den Asketen und Brahmanen, deren Ansicht es ist, ",
-  "dn29:38.2": "dass das Selbst nach dem Tod Form besitzt und heil ist, ",
+  "dn29:38.2": "dass das Selbst nach dem Tod Form besitzt und frei von Krankheit ist, ",
   "dn29:38.3": "und sage: ",
   "dn29:38.4": "‚Geehrter, ist es das, was ihr sagt: ",
   "dn29:38.5": "„Das Selbst besitzt nach dem Tod Form und ist heil“?‘ ",
