Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -372,7 +372,7 @@
   "dn29:38.2": "dass das Selbst nach dem Tod Form besitzt und frei von Krankheit ist, ",
   "dn29:38.3": "und sage: ",
   "dn29:38.4": "‚Geehrter, ist es das, was ihr sagt: ",
-  "dn29:38.5": "„Das Selbst besitzt nach dem Tod Form und ist heil“?‘ ",
+  "dn29:38.5": "„Das Selbst besitzt nach dem Tod Form und ist frei von Krankheit“?‘ ",
   "dn29:38.6": "Und wenn sie sagen: ‚Ja! ",
   "dn29:38.7": "Das allein ist die Wahrheit, andere Vorstellungen sind einfältig‘, ",
   "dn29:38.8": "dann erkenne ich das nicht an. ",
