Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -422,7 +422,7 @@
   "dn1:2.38.0": "3.2.1. Leben nach dem Tod mit Wahrnehmung ",
   "dn1:2.38.1": "Es gibt manche Asketen und Brahmanen, die sagen, es gebe ein Leben nach dem Tod, und die auf sechzehn Grundlagen behaupten, das Selbst lebe nach dem Tod weiter und besitze Wahrnehmung. ",
   "dn1:2.38.2": "Und was sind die sechzehn Grundlagen, auf die sie sich stützen? ",
-  "dn1:2.38.3": "Sie behaupten: ‚Das Selbst ist nach dem Tod heil und besitzt Wahrnehmung, und es besitzt Form … ",
+  "dn1:2.38.3": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und besitzt Wahrnehmung, und es besitzt Form … ",
   "dn1:2.38.4": "und es ist formlos … ",
   "dn1:2.38.5": "und es besitzt Form und ist auch formlos … ",
   "dn1:2.38.6": "und es besitzt weder Form, noch ist es formlos … ",
