--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -445,7 +445,7 @@
   "dn1:3.1.0": "3.2.2. Leben nach dem Tod ohne Wahrnehmung ",
   "dn1:3.1.1": "Es gibt manche Asketen und Brahmanen, die sagen, es gebe ein Leben nach dem Tod, und die auf acht Grundlagen behaupten, das Selbst lebe nach dem Tod weiter und sei ohne Wahrnehmung. ",
   "dn1:3.1.2": "Und was sind die acht Grundlagen, auf die sie sich stützen? ",
-  "dn1:3.2.1": "Sie behaupten: ‚Das Selbst ist nach dem Tod heil und ohne Wahrnehmung, und es besitzt Form … ",
+  "dn1:3.2.1": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und ohne Wahrnehmung, und es besitzt Form … ",
   "dn1:3.2.2": "und es ist formlos … ",
   "dn1:3.2.3": "und es besitzt Form und ist auch formlos … ",
   "dn1:3.2.4": "und es besitzt weder Form, noch ist es formlos … ",
