--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -460,7 +460,7 @@
   "dn1:3.5.0": "3.2.3. Leben nach dem Tod, das weder Wahrnehmung noch keine Wahrnehmung hat ",
   "dn1:3.5.1": "Es gibt manche Asketen und Brahmanen, die sagen, es gebe ein Leben nach dem Tod, und die auf acht Grundlagen behaupten, das Selbst lebe nach dem Tod weiter und habe weder Wahrnehmung noch keine Wahrnehmung. ",
   "dn1:3.5.2": "Und was sind die acht Grundlagen, auf die sie sich stützen? ",
-  "dn1:3.6.1": "Sie behaupten: ‚Das Selbst ist nach dem Tod heil und hat weder Wahrnehmung noch keine Wahrnehmung, und es besitzt Form … ",
+  "dn1:3.6.1": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und hat weder Wahrnehmung noch keine Wahrnehmung, und es besitzt Form … ",
   "dn1:3.6.2": "und es ist formlos … ",
   "dn1:3.6.3": "und es besitzt Form und ist auch formlos … ",
   "dn1:3.6.4": "und es besitzt weder Form, noch ist es formlos … ",
