--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -7,5 +7,5 @@
   "mn28:6.1": "E qual è, amico, l’elemento terra? ",
   "mn28:6.2": "L’elemento terra può essere interno o esterno. ",
   "mn28:6.3": "E che cos'e' l'elemento terra interno? ",
-  "mn28:6.4": "Qualsiasi cosa interna individuale che sia dura, solida, attaccata/appropriata/alimentata (tenuta viva), ovvero "
+  "mn28:6.4": "Qualsiasi cosa interna individuale che sia dura, solida, appropriata/alimentata (tenuta viva), ovvero "
 }
