Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "an3.62:1.2": "Von welchen drei? ",
   "an3.62:1.3": "Es kommt eine Zeit, wo ein großes Feuer auflodert, ",
   "an3.62:1.4": "und es brennt Dörfer, Marktflecken und Städte nieder. ",
-  "an3.62:1.5": "Wenn das passiert, kann eine Mutter ihr Kind nicht finden und ein Kind kann seine Mutter nicht finden. ",
+  "an3.62:1.5": "Wenn das geschieht, kann eine Mutter ihr Kind nicht finden und ein Kind kann seine Mutter nicht finden. ",
   "an3.62:1.6": "Das ist die erste Gefahr, die Mutter und Kind auseinanderreißt. ",
   "an3.62:2.1": "Weiterhin kommt da eine Zeit, wo ein großes Unwetter aufzieht, ",
   "an3.62:2.2": "und es entfesselt einen mächtigen Wolkenbruch, ",
