--- a/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "an3.62:2.4": "Wenn das geschieht, kann eine Mutter ihr Kind nicht finden und ein Kind kann seine Mutter nicht finden. ",
   "an3.62:2.5": "Das ist die zweite Gefahr, die Mutter und Kind auseinanderreißt. ",
   "an3.62:3.1": "Weiterhin kommt da eine Zeit, wo Gefahr durch Aufruhr in den unzivilisierten Gebieten droht, und die Landbevölkerung steigt auf ihre Karren und flieht in alle Richtungen. ",
-  "an3.62:3.2": "Wenn das passiert, kann eine Mutter ihr Kind nicht finden und ein Kind kann seine Mutter nicht finden. ",
+  "an3.62:3.2": "Wenn das geschieht, kann eine Mutter ihr Kind nicht finden und ein Kind kann seine Mutter nicht finden. ",
   "an3.62:3.3": "Das ist die dritte Gefahr, die Mutter und Kind auseinanderreißt. ",
   "an3.62:3.4": "Das sind die drei Gefahren, die Mutter und Kind auseinanderreißen, von denen ein ungebildeter gewöhnlicher Mensch spricht. ",
   "an3.62:4.1": "Mönche und Nonnen, ein ungebildeter gewöhnlicher Mensch spricht von drei Gefahren, die Mutter und Kind nicht auseinanderreißen. ",
