Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "an3.62:4.2": "Von welchen drei? ",
   "an3.62:4.3": "Da kommt eine Zeit, wo ein großes Feuer auflodert, ",
   "an3.62:4.4": "und es brennt Dörfer, Marktflecken und Städte nieder. ",
-  "an3.62:4.5": "Wenn das passiert, kann eine Mutter manchmal ihr Kind finden und ein Kind kann seine Mutter finden. ",
+  "an3.62:4.5": "Wenn das geschieht, kann eine Mutter manchmal ihr Kind finden und ein Kind kann seine Mutter finden. ",
   "an3.62:4.6": "Das ist die erste Gefahr, die Mutter und Kind nicht auseinanderreißt. ",
   "an3.62:5.1": "Weiterhin kommt da eine Zeit, wo ein großes Unwetter aufzieht, ",
   "an3.62:5.2": "und es entfesselt einen mächtigen Wolkenbruch, ",
