Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.62_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "an3.62:5.1": "Weiterhin kommt da eine Zeit, wo ein großes Unwetter aufzieht, ",
   "an3.62:5.2": "und es entfesselt einen mächtigen Wolkenbruch, ",
   "an3.62:5.3": "der Dörfer, Marktflecken und Städte fortreißt. ",
-  "an3.62:5.4": "Wenn das passiert, kann eine Mutter manchmal ihr Kind finden und ein Kind kann seine Mutter finden. ",
+  "an3.62:5.4": "Wenn das geschieht, kann eine Mutter manchmal ihr Kind finden und ein Kind kann seine Mutter finden. ",
   "an3.62:5.5": "Das ist die zweite Gefahr, die Mutter und Kind nicht auseinanderreißt. ",
   "an3.62:6.1": "Weiterhin kommt da eine Zeit, wo Gefahr durch Aufruhr in den unzivilisierten Gebieten droht, und die Landbevölkerung steigt auf ihre Karren und flieht in alle Richtungen. ",
   "an3.62:6.2": "Wenn das passiert, kann eine Mutter manchmal ihr Kind finden und ein Kind kann seine Mutter finden. ",
