--- a/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
@@ -32,7 +32,7 @@
   "dn26:3.6": "Da ließ der König den Kronprinzen rufen und sagte: ",
   "dn26:3.7": "‚Lieber Prinz, mein himmlisches Rad-Juwel ist von seinem Platz zurückgewichen. ",
   "dn26:3.8": "Ich habe gehört, ",
-  "dn26:3.9": "dass ein Rad-drehender Herrscher, wenn ihm dies widerfährt, nicht mehr lange zu leben hat. ",
+  "dn26:3.9": "dass ein Rad-drehender Herrscher, wenn das geschieht, nicht mehr lange zu leben hat. ",
   "dn26:3.10": "Ich habe menschliche Freuden genossen. Nun ist es an der Zeit, dass ich mich um göttliche Freuden bemühe. ",
   "dn26:3.11": "Komm, lieber Prinz, herrsche über dieses vom Meer umgebene Land! ",
   "dn26:3.12": "Ich werde mir Haar und Bart rasieren, ockerfarbene Roben anlegen und aus dem Haus fortziehen ins hauslose Leben.‘ ",
