--- a/translation/de/sabbamitta/sutta/an/an4/an4.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.10_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an4.10:1.3": "Das Joch der Sinnenfreuden, das Joch künftiger Leben, das Joch der Ansichten und das Joch der Unwissenheit. ",
   "an4.10:1.4": "Und was ist das Joch der Sinnenfreuden? ",
   "an4.10:1.5": "Es ist, wenn man bei den Sinnenfreuden den Ursprung, das Enden, die vorteilhaften und die nachteiligen Folgen und das Entrinnen nicht wahrhaftig versteht. ",
-  "an4.10:1.6": "Dann bleibt eine zugrunde liegende Neigung zu Gier, Genießen, Zuneigung, Schwäche, Durst, Leidenschaft, Festhalten und Verlangen in Bezug auf Sinnenfreuden bestehen. ",
+  "an4.10:1.6": "Dann bleibt eine zugrunde liegende Neigung zu Gier, Genießen, Zuneigung, Betörung, Durst, Leidenschaft, Festhalten und Verlangen in Bezug auf Sinnenfreuden bestehen. ",
   "an4.10:1.7": "Das nennt man das Joch der Sinnenfreuden. ",
   "an4.10:1.8": "Solcherart ist das Joch der Sinnenfreuden. ",
   "an4.10:2.1": "Und was ist das Joch künftiger Leben? ",
