--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "sn3.25:1.1": "In Sāvatthī. ",
   "sn3.25:1.2": "König Pasenadi setzte sich zur Seite hin, und der Buddha sagte zu ihm: ",
   "sn3.25:1.3": "„Nun, großer König, woher kommst du mitten am Tag?“ ",
-  "sn3.25:1.4": "„Herr, es gibt gesalbte adelige Könige, die von Herrschaft berauscht und von Gier nach Sinnenfreuden besessen sind. Sie haben für das Land Sicherheit gewonnen und residieren in einem großen eroberten Gebiet. Heute war ich damit beschäftigt, die Pflichten eines solchen Königs zu erfüllen.“ ",
+  "sn3.25:1.4": "„Herr, es gibt gesalbte adelige Könige, die von Herrschaft betört und von Gier nach Sinnenfreuden besessen sind. Sie haben für das Land Sicherheit gewonnen und residieren in einem großen eroberten Gebiet. Heute war ich damit beschäftigt, die Pflichten eines solchen Königs zu erfüllen.“ ",
   "sn3.25:2.1": "„Was denkst du, großer König? ",
   "sn3.25:2.2": "Angenommen, ein vertrauenswürdiger und zuverlässiger Mann käme von Osten. ",
   "sn3.25:2.3": "Er begäbe sich zu dir und meldete: ",
