--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -123,5 +123,6 @@
   "mn122:21.1": "Da das so ist, Ānanda, gibt es eine Gefahr für den Lehrer, eine Gefahr für den Schüler und eine Gefahr für den, der das geistliche Leben führt. ",
   "mn122:22.1": "Und wie gibt es eine Gefahr für den Lehrer? ",
   "mn122:22.2": "Da sucht ein Lehrer einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. ",
-  "mn122:22.3": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. "
+  "mn122:22.3": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. ",
+  "mn122:22.4": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. "
 }
