--- a/translation/de/sabbamitta/sutta/sn/sn7/sn7.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn7/sn7.10_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn7.10:2.3": "die er seit sechs Tagen vermisst: ",
   "sn7.10:2.4": "Darum ist dieser Asket glücklich. ",
   "sn7.10:3.1": "Sicher hat dieser Asket ",
-  "sn7.10:3.2": "kein Sesamfeld, das verdorben ist, ",
+  "sn7.10:3.2": "kein Sesamfeld, das vernichtet ist, ",
   "sn7.10:3.3": "mit nur ein oder zwei Blättern: ",
   "sn7.10:3.4": "Darum ist dieser Asket glücklich. ",
   "sn7.10:4.1": "Sicher hat dieser Asket ",
