--- a/translation/de/sabbamitta/sutta/sn/sn7/sn7.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn7/sn7.10_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "sn7.10:9.3": "die ich seit sechs Tagen vermisse: ",
   "sn7.10:9.4": "Darum bin ich glücklich, Brahmane. ",
   "sn7.10:10.1": "Du hast recht, Brahmane, ",
-  "sn7.10:10.2": "ich habe kein Sesamfeld, das verdorben ist, ",
+  "sn7.10:10.2": "ich habe kein Sesamfeld, das vernichtet ist, ",
   "sn7.10:10.3": "mit nur ein oder zwei Blättern: ",
   "sn7.10:10.4": "Darum bin ich glücklich, Brahmane. ",
   "sn7.10:11.1": "Du hast recht, Brahmane, ",
