Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn2_translation-de-sabbamitta.json
@@ -584,7 +584,7 @@
   "dn2:101.4": "Da begrüßte der König die Worte des Buddha und stimmte ihm zu. Er erhob sich von seinem Sitz, verbeugte sich und umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und ging. ",
   "dn2:102.1": "Kurz nachdem der König gegangen war, wandte sich der Buddha an die Mönche und Nonnen: ",
   "dn2:102.2": "„Dieser König ist zerbrochen, Mönche und Nonnen, ",
-  "dn2:102.3": "er ist zerstört. ",
+  "dn2:102.3": "er ist vernichtet. ",
   "dn2:102.4": "Wenn er nicht seinem Vater, einem gerechten und prinzipientreuen König, das Leben genommen hätte, wäre ihm da, wo er gerade saß, das unbefleckte, makellose Auge des Dhamma aufgegangen.“ ",
   "dn2:102.5": "Das sagte der Buddha. ",
   "dn2:102.6": "Zufrieden begrüßten die Mönche und Nonnen die Worte des Buddha. "
