Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -127,5 +127,6 @@
   "mn122:22.4": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. ",
   "mn122:22.5": "Dieser Lehrer, so heißt es, ist von der Gefahr für den Lehrer gefährdet. ",
   "mn122:22.6": "Er ist vernichtet von schlechten, untauglichen Eigenschaften, die verunreinigen, zu künftigen Leben führen, die beschwerlich sind, zu Leiden führen, zu Wiedergeburt, Alter und Tod. ",
-  "mn122:22.7": "So gibt es eine Gefahr für den Lehrer. "
+  "mn122:22.7": "So gibt es eine Gefahr für den Lehrer. ",
+  "mn122:23.1": "Und wie gibt es eine Gefahr für den Schüler? "
 }
