--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -123,7 +123,7 @@
   "mn81:18.1": "‘Great king, there is a market town named Vebhaliṅga, ",
   "mn81:18.2": "where there is a potter named Ghaṭīkāra. ",
   "mn81:18.3": "He is my chief supporter. ",
-  "mn81:18.4": "Now, great king, you thought, “The Buddha does not accept my invitation to reside for the rains in Varanasi,” and you became sad and upset. ",
+  "mn81:18.4": "Now, great king, when you thought, “The Buddha does not accept my invitation to reside for the rains in Varanasi,” you became sad and upset. ",
   "mn81:18.5": "But Ghaṭīkāra doesn’t get upset, nor will he. ",
   "mn81:18.6": "Ghaṭīkāra has gone for refuge to the Buddha, the teaching, and the Saṅgha. ",
   "mn81:18.7": "He doesn’t kill living creatures, steal, commit sexual misconduct, lie, or take alcoholic drinks that cause negligence. ",
