--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -131,7 +131,7 @@
   "mn81:18.9": "He is free of doubt regarding suffering, its origin, its cessation, and the practice that leads to its cessation. ",
   "mn81:18.10": "He eats in one part of the day; he’s celibate, ethical, and of good character. ",
   "mn81:18.11": "He has set aside gems and gold, and rejected gold and money. ",
-  "mn81:18.12": "He’s put down the shovel and doesn’t dig the earth with his own hands. ",
+  "mn81:18.12": "He has put down the shovel and doesn’t dig the earth with his own hands. ",
   "mn81:18.13": "He takes what has crumbled off by a riverbank or been dug up by mice, and brings it back in a carrier. When he has made a pot, he says, ",
   "mn81:18.14": "“Anyone may leave bagged sesame, mung beans, or chickpeas here and take what they wish.” ",
   "mn81:18.15": "He looks after his blind old parents. ",
