--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -7,7 +7,7 @@
   "mn28:6.1": "E qual è, amico, l’elemento terra? ",
   "mn28:6.2": "L’elemento terra può essere interno o esterno. ",
   "mn28:6.3": "E che cos'e' l'elemento terra interno? ",
-  "mn28:6.4": "Qualsiasi cosa interna individuale che sia dura, solida, appropriata/alimentata (tenuta in vita / viva ~come le fiamme~), ovvero ",
+  "mn28:6.4": "Qualsiasi cosa interna individuale che sia dura, solida, appropriata/alimentata (tenuta in vita / viva ~come le fiamme~ tenuta accesa), ovvero ",
   "mn28:6.5": "capelli, peli, unghie, denti, pelle, carne, tendini, ossa, midollo osseo, reni, cuore, fegato, pleura, milza, polmoni, intestini, mesentere, contenuti dello stomaco, feci, o qualsiasi altra cosa interna individuale che sia dura, solida e alimentata/appropriata* ",
   "mn28:7.1": "Arriva un tempo in cui l'elemento terra esterno viene scosso/disturbato. ",
   "mn28:7.2": "In questa occasione, l'elemento terra esterno scompare. ",
