Translations by ayyasoma to translation/it/soma/sutta/mn/mn28_translation-it-soma.json

--- a/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
+++ b/translation/it/soma/sutta/mn/mn28_translation-it-soma.json
@@ -11,5 +11,5 @@
   "mn28:6.5": "capelli, peli, unghie, denti, pelle, carne, tendini, ossa, midollo osseo, reni, cuore, fegato, pleura, milza, polmoni, intestini, mesentere, contenuti dello stomaco, feci, o qualsiasi altra cosa interna individuale che sia dura, solida e alimentata/appropriata* ",
   "mn28:7.1": "Arriva un tempo in cui l'elemento terra esterno viene scosso/disturbato. ",
   "mn28:7.2": "In questa occasione, l'elemento terra esterno scompare. ",
-  "mn28:7.4": "Che dire di questo corpo di breve vita, tenuto in vita/alimentata/appropriata (tenuto acceso) dall'arsura/sete infinita. "
+  "mn28:7.4": "Che dire di questo corpo di breve vita, tenuto in vita/alimentata/appropriata (tenuto acceso) dall'arsura/sete infinita: di certo in questo caso non si puo' dire questo sono io, questo mi appartiene. "
 }
