--- a/translation/pl/hardao/sutta/mn/mn115_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/mn/mn115_translation-pl-hardao.json
@@ -1,4 +1,4 @@
 {
   "mn115:12.1": "W jakiej mierze, Bhante, rzetelnie mówić o mnichu, który dobrze wie, co może się stać i co nie może się stać? ",
-  "mn115:12.2": "„Otóż, Ānando, mnich taki pojmuje: »nie może się tak stać, nie jest możliwe, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek wytworzenie za trwałe, nie istnieje taka sposobność«, "
+  "mn115:12.2": "„Otóż, Ānando, mnich taki pojmuje: »nie może się tak stać, nie ma sposobności, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek wytworzenie za trwałe, nie istnieje taka możliwość«, "
 }
