--- a/translation/pl/hardao/sutta/mn/mn115_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/mn/mn115_translation-pl-hardao.json
@@ -2,5 +2,6 @@
   "mn115:12.1": "W jakiej mierze, Bhante, rzetelnie mówić o mnichu, który dobrze wie, co może się stać i co nie może się stać? ",
   "mn115:12.2": "„Otóż, Ānando, mnich taki pojmuje: »nie może się tak stać, nie ma sposobności, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek wytworzenie jako coś trwałego, nie istnieje taka możliwość«, ",
   "mn115:12.3": "pojmuje: »może się tak stać, jest możliwość, by pospolity człowiek przyjął jakiekolwiek wytworzenie jako coś trwałego, istnieje taka możliwość«, ",
-  "mn115:12.4": "pojmuje: »nie może się tak stać, nie ma sposobności, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek wytworzenie jako coś przyjemnego, nie istnieje taka możliwość«, "
+  "mn115:12.4": "pojmuje: »nie może się tak stać, nie ma sposobności, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek wytworzenie jako coś przyjemnego, nie istnieje taka możliwość«, ",
+  "mn115:12.5": "pojmuje: »może się tak stać, jest możliwość, by pospolity człowiek przyjął jakiekolwiek wytworzenie jako coś przyjemnego, istnieje taka możliwość«, "
 }
