--- a/translation/pl/hardao/sutta/mn/mn115_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/mn/mn115_translation-pl-hardao.json
@@ -4,5 +4,6 @@
   "mn115:12.3": "pojmuje: »może się tak stać, jest możliwość, by pospolity człowiek przyjął jakiekolwiek wytworzenie jako coś trwałego, istnieje taka możliwość«, ",
   "mn115:12.4": "pojmuje: »nie może się tak stać, nie ma sposobności, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek wytworzenie jako coś przyjemnego, nie istnieje taka możliwość«, ",
   "mn115:12.5": "pojmuje: »może się tak stać, jest możliwość, by pospolity człowiek przyjął jakiekolwiek wytworzenie jako coś przyjemnego, istnieje taka możliwość«, ",
-  "mn115:12.6": "pojmuje: »nie może się tak stać, nie ma sposobności, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek zjawisko jako własne ‘ja’, nie istnieje taka możliwość«, "
+  "mn115:12.6": "pojmuje: »nie może się tak stać, nie ma sposobności, by osoba urzeczywistniona w poglądzie przyjęła jakiekolwiek zjawisko jako własne ‘ja’, nie istnieje taka możliwość«, ",
+  "mn115:12.7": "pojmuje: »może się tak stać, jest możliwość, by pospolity człowiek przyjął jakiekolwiek zjawisko jako własne ‘ja’, istnieje taka możliwość«, "
 }
