--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -131,5 +131,6 @@
   "mn122:23.1": "Und wie gibt es eine Gefahr für den Schüler? ",
   "mn122:23.2": "Da sucht der Schüler eines Lehrers, indem er seinem Lehrer im Pflegen der Abgeschiedenheit nacheifert, ",
   "mn122:23.3": "einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. ",
-  "mn122:23.4": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. "
+  "mn122:23.4": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. ",
+  "mn122:23.5": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. "
 }
