--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -133,5 +133,6 @@
   "mn122:23.3": "einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, das Freie, einen Strohhaufen. ",
   "mn122:23.4": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. ",
   "mn122:23.5": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. ",
-  "mn122:23.6": "Dieser Schüler, so heißt es, ist von der Gefahr für den Schüler gefährdet. "
+  "mn122:23.6": "Dieser Schüler, so heißt es, ist von der Gefahr für den Schüler gefährdet. ",
+  "mn122:23.7": "Er ist vernichtet von schlechten, untauglichen Eigenschaften, die verunreinigen, zu künftigen Leben führen, die beschwerlich sind, zu Leiden führen, zu Wiedergeburt, Alter und Tod. "
 }
