Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -135,5 +135,6 @@
   "mn122:23.5": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. ",
   "mn122:23.6": "Dieser Schüler, so heißt es, ist von der Gefahr für den Schüler gefährdet. ",
   "mn122:23.7": "Er ist vernichtet von schlechten, untauglichen Eigenschaften, die verunreinigen, zu künftigen Leben führen, die beschwerlich sind, zu Leiden führen, zu Wiedergeburt, Alter und Tod. ",
-  "mn122:23.8": "So gibt es eine Gefahr für den Schüler. "
+  "mn122:23.8": "So gibt es eine Gefahr für den Schüler. ",
+  "mn122:24.1": "Und wie gibt es eine Gefahr für den, der das geistliche Leben führt? "
 }
