Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -136,5 +136,6 @@
   "mn122:23.6": "Dieser Schüler, so heißt es, ist von der Gefahr für den Schüler gefährdet. ",
   "mn122:23.7": "Er ist vernichtet von schlechten, untauglichen Eigenschaften, die verunreinigen, zu künftigen Leben führen, die beschwerlich sind, zu Leiden führen, zu Wiedergeburt, Alter und Tod. ",
   "mn122:23.8": "So gibt es eine Gefahr für den Schüler. ",
-  "mn122:24.1": "Und wie gibt es eine Gefahr für den, der das geistliche Leben führt? "
+  "mn122:24.1": "Und wie gibt es eine Gefahr für den, der das geistliche Leben führt? ",
+  "mn122:24.2": "Da erscheint ein Klargewordener in der Welt, ein Vollendeter, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet. "
 }
