--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -138,5 +138,6 @@
   "mn122:23.8": "So gibt es eine Gefahr für den Schüler. ",
   "mn122:24.1": "Und wie gibt es eine Gefahr für den, der das geistliche Leben führt? ",
   "mn122:24.2": "Da erscheint ein Klargewordener in der Welt, ein Vollendeter, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet. ",
-  "mn122:24.3": "Er sucht einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, den freien Himmel, einen Strohhaufen. "
+  "mn122:24.3": "Er sucht einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, den freien Himmel, einen Strohhaufen. ",
+  "mn122:24.4": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. "
 }
