--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -140,5 +140,6 @@
   "mn122:24.2": "Da erscheint ein Klargewordener in der Welt, ein Vollendeter, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet. ",
   "mn122:24.3": "Er sucht einen abgelegenen Platz auf: eine Wildnis, den Fuß eines Baumes, einen Hügel, eine Schlucht, eine Berghöhle, ein Leichenfeld, einen Wald, den freien Himmel, einen Strohhaufen. ",
   "mn122:24.4": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. ",
-  "mn122:24.5": "Wenn das geschieht, genießt er keine Betörung, wird nicht gierig und verfällt nicht wieder in Schwelgen. "
+  "mn122:24.5": "Wenn das geschieht, genießt er keine Betörung, wird nicht gierig und verfällt nicht wieder in Schwelgen. ",
+  "mn122:24.6": "Aber ein Schüler dieses Lehrers sucht, indem er seinem Lehrer im Pflegen der Abgeschiedenheit nacheifert, "
 }
