--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -146,5 +146,6 @@
   "mn122:24.8": "Während er dort zurückgezogen meditiert, wird er von einem Strom von Brahmanen und Hausbesitzern aus Stadt und Land besucht. ",
   "mn122:24.9": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. ",
   "mn122:24.10": "Dieser Mensch, der ein geistliches Leben führt, so heißt es, ist von der Gefahr für den gefährdet, der ein geistliches Leben führt. ",
-  "mn122:24.11": "Er ist vernichtet von schlechten, untauglichen Eigenschaften, die verunreinigen, zu künftigen Leben führen, die beschwerlich sind, zu Leiden führen, zu Wiedergeburt, Alter und Tod. "
+  "mn122:24.11": "Er ist vernichtet von schlechten, untauglichen Eigenschaften, die verunreinigen, zu künftigen Leben führen, die beschwerlich sind, zu Leiden führen, zu Wiedergeburt, Alter und Tod. ",
+  "mn122:24.12": "So gibt es eine Gefahr für den, der das geistliche Leben führt. "
 }
