--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -147,5 +147,6 @@
   "mn122:24.9": "Wenn das geschieht, genießt er Betörung, wird gierig und verfällt wieder in Schwelgen. ",
   "mn122:24.10": "Dieser Mensch, der ein geistliches Leben führt, so heißt es, ist von der Gefahr für den gefährdet, der ein geistliches Leben führt. ",
   "mn122:24.11": "Er ist vernichtet von schlechten, untauglichen Eigenschaften, die verunreinigen, zu künftigen Leben führen, die beschwerlich sind, zu Leiden führen, zu Wiedergeburt, Alter und Tod. ",
-  "mn122:24.12": "So gibt es eine Gefahr für den, der das geistliche Leben führt. "
+  "mn122:24.12": "So gibt es eine Gefahr für den, der das geistliche Leben führt. ",
+  "mn122:24.13": "Und so führt die Gefahr für den, der das geistliche Leben führt, zu einem viel schmerzhafteren und bittereren Ergebnis, verglichen mit der Gefahr für den Lehrer oder der Gefahr für den Schüler. Sie führt sogar in die Unterwelt. "
 }
