Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -152,5 +152,5 @@
   "mn122:25.1": "Daher, Ānanda, sollt ihr mich als Freund behandeln, nicht als Feind. ",
   "mn122:25.2": "Das wird zu eurem langanhaltenden Nutzen und Glück sein. ",
   "mn122:25.3": "Und wie behandeln Schüler ihren Lehrer als Feind, nicht als Freund? ",
-  "mn122:25.4": "Da lehrt ein Lehrer die Schüler aus Güte und Anteilnahme den Dhamma: "
+  "mn122:25.4": "Da lehrt der Lehrer die Schüler aus Güte und Anteilnahme den Dhamma: "
 }
