--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -153,5 +153,6 @@
   "mn122:25.2": "Das wird zu eurem langanhaltenden Nutzen und Glück sein. ",
   "mn122:25.3": "Und wie behandeln Schüler ihren Lehrer als Feind, nicht als Freund? ",
   "mn122:25.4": "Da lehrt der Lehrer die Schüler aus Güte und Anteilnahme den Dhamma: ",
-  "mn122:25.5": "‚Das ist zu eurem Wohl. Das ist zu eurem Glück.‘ "
+  "mn122:25.5": "‚Das ist zu eurem Wohl. Das ist zu eurem Glück.‘ ",
+  "mn122:25.6": "Aber seine Schüler wollen nicht zuhören. Sie spitzen nicht die Ohren und versuchen nicht, zu verstehen. Sie wenden sich von der Anleitung des Lehrers ab und gehen weiter. "
 }
