Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -159,5 +159,6 @@
   "mn122:26.1": "Und wie behandeln Schüler ihren Lehrer als Freund, nicht als Feind? ",
   "mn122:26.2": "Da lehrt der Lehrer die Schüler aus Güte und Anteilnahme den Dhamma: ",
   "mn122:26.3": "‚Das ist zu eurem Wohl. Das ist zu eurem Glück.‘ ",
-  "mn122:26.4": "Und seine Schüler wollen zuhören. Sie spitzen die Ohren und versuchen, zu verstehen. Sie wenden sich nicht von der Anleitung des Lehrers ab und gehen weiter. "
+  "mn122:26.4": "Und seine Schüler wollen zuhören. Sie spitzen die Ohren und versuchen, zu verstehen. Sie wenden sich nicht von der Anleitung des Lehrers ab und gehen weiter. ",
+  "mn122:26.5": "So behandeln Schüler ihren Lehrer als Freund, nicht als Feind. "
 }
