Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -162,5 +162,6 @@
   "mn122:26.4": "Und seine Schüler wollen zuhören. Sie spitzen die Ohren und versuchen, zu verstehen. Sie wenden sich nicht von der Anleitung des Lehrers ab und gehen weiter. ",
   "mn122:26.5": "So behandeln Schüler ihren Lehrer als Freund, nicht als Feind. ",
   "mn122:26.6": "Daher, Ānanda, sollt ihr mich als Freund behandeln, nicht als Feind. ",
-  "mn122:26.7": "Das wird zu eurem langanhaltenden Nutzen und Glück sein. "
+  "mn122:26.7": "Das wird zu eurem langanhaltenden Nutzen und Glück sein. ",
+  "mn122:27.1": "Ich werde euch nicht verhätscheln wie ein Töpfer seine feuchten, ungebrannten Töpfe. "
 }
