Translations by HarDao to translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -21,7 +21,7 @@
   "sn22.1:9.5": "Gdy pozostaje w obsesji: »Jestem formą materialną, forma materialna jest moja«, jego forma materialna wypacza się i staje się inna. ",
   "sn22.1:9.6": "Gdy forma materialna wypacza się i staje się inna, powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:10.1": "Uznaje odczucie za istotę lub istotę posiadającą odczucie, lub odczucie w istocie, lub istotę w odczuciu. ",
-  "sn22.1:10.2": "Ma obsesję: „Jestem odczuciem, odczucie jest moje”. ",
+  "sn22.1:10.2": "Pozostaje w obsesji: »Jestem odczuciem, odczucie jest moje«. ",
   "sn22.1:10.3": "Gdy ma obsesję: „Jestem odczuciem, odczucie jest moje”, jego odczucie wypacza się i staje się inne. ",
   "sn22.1:10.4": "Gdy odczucie wypacza się i staje się inne, powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:11.1": "Uznaje rozpoznawanie za istotę lub istotę posiadającą rozpoznawanie, lub rozpoznawanie w istocie, lub istotę w rozpoznawaniu. ",
