Translations by HarDao to translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -25,7 +25,7 @@
   "sn22.1:10.3": "Gdy ma obsesję: „Jestem odczuciem, odczucie jest moje”, jego odczucie wypacza się i staje się inne. ",
   "sn22.1:10.4": "Gdy odczucie wypacza się i staje się inne, powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:11.1": "Uznaje rozpoznawanie za istotę lub istotę posiadającą rozpoznawanie, lub rozpoznawanie w istocie, lub istotę w rozpoznawaniu. ",
-  "sn22.1:11.2": "Ma obsesję: „Jestem rozpoznawaniem, rozpoznawanie jest moje”. ",
+  "sn22.1:11.2": "Pozostaje w obsesji: »Jestem rozpoznawaniem, rozpoznawanie jest moje«. ",
   "sn22.1:11.3": "Gdy ma obsesję: „Jestem rozpoznawaniem, rozpoznawanie jest moje”, jego rozpoznawanie wypacza się i staje się inne. ",
   "sn22.1:11.4": "Gdy rozpoznawanie wypacza się i staje się inne, powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:12.1": "Uznaje wytworzenie umysłowe za istotę lub istotę posiadającą wytworzenie umysłowe, lub wytworzenie umysłowe w istocie, lub istotę w wytworzeniu umysłowym. ",
