Translations by HarDao to translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/sn/sn22/sn22.1_translation-pl-hardao.json
@@ -33,7 +33,7 @@
   "sn22.1:12.3": "Gdy ma obsesję: „Jestem wytworzeniem umysłowym, wytworzenie umysłowe jest moje”, jego wytworzenie umysłowe wypacza się i staje się inne. ",
   "sn22.1:12.4": "Gdy wytworzenie umysłowe wypacza się i staje się inne, powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:13.1": "Uznaje świadomość za istotę lub istotę posiadającą świadomość, lub świadomość w istocie, lub istotę w świadomości. ",
-  "sn22.1:13.2": "Ma obsesję: „Jestem świadomością, świadomość jest moja”. ",
+  "sn22.1:13.2": "Pozostaje w obsesji: »Jestem świadomością, świadomość jest moja«. ",
   "sn22.1:13.3": "Gdy ma obsesję: „Jestem świadomością, świadomość jest moja”, jego świadomość wypacza się i staje się inne. ",
   "sn22.1:13.4": "Gdy świadomość wypacza się i staje się inna, powstają w nim żal, lament, krzywda, smutek i rozpacz. ",
   "sn22.1:13.5": "W taki sposób, gospodarzu, doskwiera ciało i doskwiera umysł. ",
